update to queue config logic